# databases-2024

./: .gitignore  pyproject.toml  setup.cfg
db_2024/: dog_client.py
db_2024/src/: aa_basic.py  app.py  d_server.py  db_service.py  dog_repository.py  group_crud.py  model.py  planitem_crud.py  summits.py  sync_db_wd.py  test_http.py  wd_proxy.py
db_2024/src/dogz/: db_creation.sql  dog_owner_assignment.py  dog_repository.py  dogs_app_tests.py  init_migration.py  model.py  password_dools.py  (+2 more)
src/: a.py  api_tests_rework_needed.py  app.py  b.py  db.sql  db_service.py  group_crud.py  http_client.py  model.py  planitem_crud.py  summits.py  sync_db_wd.py  wd_proxy.py
src/alerter/: .env  app.py  cron_tools.py  db_repository.py  discord_tools.py  docu.md  engine.py  model.py  table_creation.sql
src/corporate_vote/: .env  app.py  db_repository.py  model.py
src/docs/: using_alembic.md
src/dogz/: common.py  dog_owner_assignment.py  dog_repository.py  dogs_app.py  dogs_app_tests.py  init_migration.py  model.py  password_tools.py  person_repository.py  surgeries_repo.py
src/full_text/: .env  aa.py  book_importer.py  book_searcher.py  bookrepo.py  common.py  model.py  notes.md
src/kudos/: .env  .env.example  .enw.egzample  alembic.ini  common.py  kudo_repository.py  kudos_app.py  model.py  user_repository.py
src/remote_tasks/: .env.example  .gitignore  a.py  common.py  model.py  task_crud_repositories.py  task_mass_creator.py
tests/: api_tests.py  example_test.py
tests/kudos/: .env  conftest.py  http_conftest.py  kudo_http_test.py  kudo_repo_test.py
(+37 files in other folders)
